--- a/app/templates/libros_disponibles.html
+++ b/app/templates/libros_disponibles.html
@@ -7,7 +7,7 @@ endblock %} {% block extra_css %}
 {% endblock %} {% block content %}
 
 <h2>Seleccionar Libro para Préstamo</h2>
-<p class="usuario-target">
+<p class="usuario-objetivo">
     Prestando a: {{ usuario.nombre }} {{ usuario.apellido }} (DNI: {{
     usuario.dni }})
 </p>
