--- a/app/static/css/libros_disponibles.css
+++ b/app/static/css/libros_disponibles.css
@@ -1,4 +1,4 @@
-/* -------- CONTENEDOR PRINCIPAL -------- */
+/* Contendor Principal */
 main {
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
     border-radius: 12px;
@@ -8,7 +8,7 @@ main {
     margin: 2rem auto;
 }
 
-/* -------- TÍTULO Y SUBTÍTULO -------- */
+/* Título Principal */
 h2 {
     font-size: 2rem;
     font-weight: 700;
@@ -17,7 +17,7 @@ h2 {
     margin-bottom: 0.5rem;
 }
 
-.usuario-target {
+.usuario-objetivo {
     text-align: center;
     font-size: 1.1rem;
     color: #333;
@@ -26,7 +26,7 @@ h2 {
     border-bottom: 1px solid #c3c3c3;
 }
 
-/* -------- SIN LIBROS -------- */
+/* Sin libros para prestar */
 .no-libros {
     text-align: center;
     font-size: 1.1rem;
@@ -38,9 +38,7 @@ h2 {
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
 }
 
-/* ===========================
-   TABLA DE LIBROS
-=========================== */
+/* Tabla de libros */
 .table-container {
     overflow-x: auto;
     width: 100%;
@@ -59,8 +57,8 @@ table {
 th,
 td {
     padding: 1rem 0.8rem;
-    text-align: left;
-    border-bottom: 1px solid var(--color-borde);
+    text-align: center;
+    border: 1px solid var(--color-borde);
 }
 
 th {
@@ -68,7 +66,7 @@ th {
     color: #fff;
     font-weight: 600;
     text-transform: uppercase;
-    font-size: 0.8rem;
+    font-size: 0.85rem;
     letter-spacing: 0.5px;
 }
 
@@ -87,11 +85,7 @@ tr:hover td {
     transition: background 0.2s ease;
 }
 
-/* ===========================
-   BOTONES
-=========================== */
-
-/* -------- BOTÓN PRESTAR -------- */
+/* Botón Prestar */
 .container-action {
     display: flex;
     justify-content: center;
