--- a/app/templates/editar_usuario.html
+++ b/app/templates/editar_usuario.html
@@ -13,7 +13,7 @@ extra_css %}
     class="form-editar"
     id="form-editar"
 >
-    <div>
+    <div class="campo">
         <label for="nombre">Nombres:</label>
         <input
             type="text"
@@ -22,10 +22,10 @@ extra_css %}
             value="{{ usuario.nombre }}"
             readonly
         />
-        <span class="no-editable">(No editable)</span>
+        <span class="no-editable">No editable</span>
     </div>
 
-    <div>
+    <div class="campo">
         <label for="apellido">Apellido:</label>
         <input
             type="text"
@@ -34,10 +34,10 @@ extra_css %}
             value="{{ usuario.apellido }}"
             readonly
         />
-        <span class="no-editable">(No editable)</span>
+        <span class="no-editable">No editable</span>
     </div>
 
-    <div>
+    <div class="campo">
         <label for="dni">DNI:</label>
         <input
             type="text"
@@ -46,10 +46,10 @@ extra_css %}
             value="{{ usuario.dni }}"
             readonly
         />
-        <span class="no-editable">(No editable)</span>
+        <span class="no-editable">No editable</span>
     </div>
 
-    <div>
+    <div class="campo">
         <label for="telefono">Teléfono:</label>
         <input
             type="text"
@@ -60,7 +60,7 @@ extra_css %}
         <p class="error error-telefono"></p>
     </div>
 
-    <div>
+    <div class="campo">
         <label for="direccion">Dirección:</label>
         <input
             type="text"
@@ -71,7 +71,7 @@ extra_css %}
         <p class="error error-direccion"></p>
     </div>
 
-    <div>
+    <div class="campo">
         <label for="nro_direccion">N° Dirección:</label>
         <input
             type="number"
@@ -82,7 +82,7 @@ extra_css %}
         <p class="error error-nro_direccion"></p>
     </div>
 
-    <div class="botones">
+    <div class="container-buttons">
         <button type="submit">Guardar Cambios</button>
         <a href="{{ url_for('usuarios') }}" class="btn-cancelar">Cancelar</a>
     </div>
